--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-
-opencv-python~=4.8.1.78
-pybboxes~=0.1.6
+Pillow==9.5.0
+opencv-python==4.8.1.78
+pytube==15.0.0
+streamlit==1.28.2
+torch==2.1.1
+ultralytics==8.0.220
